# demoscene-playlist-tool

./: README.md  demoscene_playlist_tool.spec  pyproject.toml
.github/: copilot-instructions.md
demoscene_playlist_tool/: __main__.py
demoscene_playlist_tool/core/: executor.py  playlist.py
demoscene_playlist_tool/ui/: executor_thread.py  main_window.py
tests/: test_executor.py  test_executor_thread.py  test_integration.py  test_main_window.py  test_playlist.py
