[project]
name = "demoscene-playlist-tool"
version = "0.1.0"
description = "A playlist tool for running demoscene executables sequentially"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyinstaller>=6.19.0",
    "pyqt6>=6.10.2",
]

[project.scripts]
demoscene-playlist-tool = "demoscene_playlist_tool.__main__:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
